fix: resolve z-index issues in navigation and sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,7 @@ body {
 /* 네비게이션 */
 @layer components {
   .nav-blur {
-    @apply backdrop-blur-sm z-10;
+    @apply backdrop-blur-sm;
   }
 
   .nav-border {
@@ -60,11 +60,11 @@ body {
   }
 
   .global-nav {
-    @apply h-[44px] px-4 py-3 absolute top-0 left-0 w-full nav-blur bg-none;
+    @apply h-[44px] px-4 py-3 absolute top-0 left-0 w-full nav-blur bg-none z-50;
   }
 
   .local-nav {
-    @apply min-h-[54px] px-4 pt-3  absolute top-[45px] left-0 w-full nav-border nav-blur
+    @apply min-h-[54px] px-4 pt-3  absolute top-[45px] left-0 w-full nav-border nav-blur z-50
           transition-[max-height] ease-in-out duration-500 bg-none;
   }
 
@@ -170,7 +170,7 @@ body {
   }
 
   #scroll-section-2 .typo-wrapper {
-    @apply px-4
+    @apply max-w-[20em] mx-auto
     sm:max-w-[75vw] sm:mx-auto;
   }
 
@@ -213,6 +213,15 @@ body {
 
   .desc-message-item strong {
     @apply text-black;
+  }
+
+  .desc-message-item-2 p {
+    @apply text-[#d1e8fd] font-bold min-w-[320px] w-[320px] mx-auto
+           desktop:text-[1.2vw] desktop:w-[30vw];
+  }
+
+  .desc-message-item-2 strong {
+    @apply text-white;
   }
 }
 
